fix: footer style & hide scroll bar overflow-x

--- a/my-app/src/style/style.scss
+++ b/my-app/src/style/style.scss
@@ -22,13 +22,12 @@ body > #root,
 #root > .App {
   //height: 100%;
   width: 100%;
-  //overflow-x: hidden;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
 
 #root > .App {
-  overflow-y: auto;
   background-image: url("../image/bg_nobg.png"), linear-gradient(to right, #352e72ff, #351a37ff);
   background-size: 100%;
   background-position: center;
